--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <!-- Entry Form -->
             <form>
               <div class="form-group">
-                <label for="employee-name-input">Train Name</label>
-                <input class="form-control" id="tran-name-input" placeholder="Polar Express" type="text">
+                <label for="train-name-input">Train Name</label>
+                <input class="form-control" id="train-name-input" placeholder="Polar Express" type="text">
               </div>
               <div class="form-group">
                 <label for="destination-input">Destination</label>
