--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
 </head>
 
 <body>
-
-  <!-- Employee Tracker -->
   <div class="container">
 
     <!-- Jumbotron -->
@@ -44,7 +42,6 @@
 
       <div class="col-md-12">
 
-        <!-- Current Employees-->
         <div class="card mb-4">
           <div class="card-header">Current Train Schedule</div>
           <div class="card-body">
@@ -68,7 +65,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <!-- Add Employee  -->
+        <!-- Add Train  -->
         <div class="card mb-4">
           <div class="card-header">Add Train</div>
           <div class="card-body">
@@ -85,7 +82,7 @@
               </div>
               <div class="form-group">
                 <label for="first-train-input">First Train Time (HH:mm - military time)</label>
-                <input class="form-control" id="first-train-input" placeholder="12:30" type="text">
+                <input class="form-control" id="first-train-input" placeholder="12:30" type="datetime">
               </div>
               <div class="form-group">
                 <label for="frequency-input">Frequency (min)</label>
