Updated jumbotron with style and image

--- a/index.html
+++ b/index.html
@@ -16,26 +16,19 @@
   <!-- Moment.js Reference -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
+  <link rel="stylesheet" href="assets/css/style.css">
+
 
     <title>Train Scheduler</title>
 </head>
 
-      <style>
-    #train-table th,
-    td {
-      display: inline-block;
-      width: 16.575%;
-    }
-  </style>
-</head>
 
 <body>
   <div class="container">
 
     <!-- Jumbotron -->
-    <div class="jumbotron" style="background-color: rgb(7, 7, 58); color: white">
-      <h1 class="text-center">Train Scheduler</h1>
-      <h3 class="text-center">Take a train to see the world</h3>
+    <div class="jumbotron">
+      <h3>Take a train to see the world</h3>
     </div>
 
     <div class="row">
