Changed the sylesheet to align lower right the title header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Jumbotron -->
     <div class="jumbotron">
-      <h3>Take a train to see the world</h3>
+      <h2>Take a Train and See the World</h3>
     </div>
 
     <div class="row">
